# car-like-mobile-robot-simulator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
config/: config.yaml
include/controller/: IController.hpp  MPCController.hpp  PurePursuitController.hpp  StanleyController.hpp
include/core/: Circuits.hpp  Config.hpp  DynamicBicycleModel.hpp  IVehicleModel.hpp  KinematicBicycleModel.hpp  VehicleParams.hpp  VehicleState.hpp  Waypoint.hpp
include/engine/: ISimulationObserver.hpp  ModelFactory.hpp  SimulationEngine.hpp
include/gui/: ControlPanel.hpp  ParamPanel.hpp  TelemetryPanel.hpp
include/renderer/: Camera.hpp  SFMLRenderer.hpp
src/app/: main.cpp
src/controller/: MPCController.cpp  PurePursuitController.cpp  StanleyController.cpp
src/core/: Circuits.cpp  Config.cpp  DynamicBicycleModel.cpp  KinematicBicycleModel.cpp  Waypoint.cpp
src/engine/: ModelFactory.cpp  SimulationEngine.cpp
src/gui/: ControlPanel.cpp  ParamPanel.cpp  TelemetryPanel.cpp
src/renderer/: Camera.cpp  SFMLRenderer.cpp
